# smis

./: .gitignore  README.md  manage.py  pyproject.toml
app/conf/: asgi.py  development.py  local.py  production.py  settings.py  urls.py  wsgi.py
app/conf/settings/: assets.py
app/conf/split_settings/: assets.py  base.py  main.py
app/config/: asgi.py  dev.py  prod.py  settings.py  tailwind.css  urls.py  wsgi.py
app/home/: apps.py  views.py
app/home/templates/home/: index.html
app/main/: apps.py  urls.py  views.py
app/main/templates/main/: index.html  page.html
app/pages/: apps.py  urls.py  views.py
djangx/adminx/: apps.py
djangx/authx/: apps.py  backends.py
djangx/components/: apps.py
djangx/components/management/commands/: tailwindcss.py  tw.py
djangx/components/static/components/: README.md
djangx/components/templates/components/: layout.html
djangx/components/templatetags/: components.py
djangx/core/: apps.py
djangx/tailwindcss/: apps.py
djangx/ui/management/: package.json
djangx/ui/templatetags/: ui.py
djanx/: urls.py
djanx/adminx/: admin.py  apps.py
djanx/base/: apps.py
djanx/base/tailwind/: .gitignore  package.json
djanx/base/templatetags/: base_tags.py
djanx/core/: apps.py
djanx/core/templatetags/: core_tags.py
djanx/tailwindcss/: apps.py
djanx/tailwindcss/management/: package-lock.json
djanx/tailwindcss/templatetags/: tailwindcss.py
djanx/tw/: apps.py
djanx/tw/management/: .prettierignore  .prettierrc  package-lock.json  package.json
djanx/tw/templatetags/: tw_tags.py
(+21 files in other folders)
