[project]
name = "SMIS"
version = "0.1.0"
description = "School Management Information System for The Spark Playhouse."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # djangX framework
    "django>=6.0b1",
    "django-phonenumber-field[phonenumberslite]>=8.3.0",
    "python-decouple>=3.8",
    # User specific
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = ["djlint>=1.36.4"]

[tool.djlint]
ignore = "H016"
blank_line_after_tag = "load,extends"
