[project]
name = "SMIS"
version = "0.1.0"
description = "School Management Information System for The Spark Playhouse."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
    # For testing CSP
    # "django>=6.0b1",
    # User specific
    "python-decouple>=3.8",
    "psycopg[binary,pool]>=3.2.12",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = ["djlint>=1.36.4"]

[tool.djlint]
ignore = "H016"
blank_line_after_tag = "load,extends"
